# auctions

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  settings.toml.example
auctions/: asgi.py  gunicorn.py  settings.py  urls.py  wsgi.py
auctions/auctions_app/: admin.py  apps.py  models.py  views.py
auctions/auctions_app/migrations/: 0001_initial.py
auctions/custom_auth/: apps.py  decorators.py  models.py  urls.py  views.py
auctions/custom_auth/migrations/: 0001_initial.py
auctions/custom_auth/static/custom_auth/css/: login.css
auctions/custom_auth/templates/custom_auth/: login.html
auctions/custom_auth/templates/custom_auth/components/: login_form.html
auctions/static/css/: base.css  footer.css
auctions/templates/: base.html  footer.html  navbar.html
